[gd_scene load_steps=2 format=3 uid="uid://c2cultistvote12345"]

[ext_resource type="Script" path="res://src/ui/cultist_vote.gd" id="1_script"]

[node name="CultistVoteUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="Dimmer" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.6)

[node name="CenterContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -300.0
offset_right = 400.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2

[node name="MainPanel" type="PanelContainer" parent="CenterContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/MainPanel"]
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/MainPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="HeaderHBox" type="HBoxContainer" parent="CenterContainer/MainPanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="CenterContainer/MainPanel/MarginContainer/VBoxContainer/HeaderHBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
theme_override_colors/font_color = Color(1, 0.3, 0.3, 1)
text = "EMERGENCY VOTE"
horizontal_alignment = 1

[node name="TimerLabel" type="Label" parent="CenterContainer/MainPanel/MarginContainer/VBoxContainer/HeaderHBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 20
theme_override_colors/font_color = Color(1, 0.8, 0.2, 1)
text = "30s"

[node name="InstructionLabel" type="Label" parent="CenterContainer/MainPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
text = "Select a player to vote out, or skip to abstain"
horizontal_alignment = 1

[node name="Separator" type="HSeparator" parent="CenterContainer/MainPanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="PlayersScrollContainer" type="ScrollContainer" parent="CenterContainer/MainPanel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 300)
layout_mode = 2
size_flags_vertical = 3

[node name="PlayersVBox" type="VBoxContainer" parent="CenterContainer/MainPanel/MarginContainer/VBoxContainer/PlayersScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 8

[node name="Separator2" type="HSeparator" parent="CenterContainer/MainPanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="BottomHBox" type="HBoxContainer" parent="CenterContainer/MainPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="SkipButton" type="Button" parent="CenterContainer/MainPanel/MarginContainer/VBoxContainer/BottomHBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Skip Vote"

[node name="ConfirmButton" type="Button" parent="CenterContainer/MainPanel/MarginContainer/VBoxContainer/BottomHBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
disabled = true
theme_override_font_sizes/font_size = 16
text = "Confirm Vote"

[node name="VoteStatusLabel" type="Label" parent="CenterContainer/MainPanel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 14
theme_override_colors/font_color = Color(0.6, 0.6, 0.6, 1)
text = "Votes: 0/4 cast"
horizontal_alignment = 1
